# packaging-exemplar

./: README.md  pyproject.toml
src/example_package_fatemacz/: example.py
tests/: test_example.py
